# RotateIt

./: CMakeLists.txt  LICENSE  README.md
include/ImGUI/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
src/: CMakeLists.txt  Core.cpp  Core.h  main.cpp
src/Shader/: shader.fx
